--- a/ressources/css/index.css
+++ b/ressources/css/index.css
@@ -1,4 +1,5 @@
 html {
+  width: 1200px;
   background-color: black;
   font-family: "Helvetica";
   font-size: 22px;
@@ -7,4 +8,41 @@ html {
 }
 h1 {
   display: none;
+}
+
+.logo {
+  margin-left: 10px;
+  height: 50px;
+}
+
+header {
+  height: 69px;
+  display: flex;
+}
+
+.menu {
+  display: flex;
+  justify-content: flex-end;
+}
+.menu ol {
+  text-decoration: underline;
+}
+
+.ourmission {
+  margin-left: 10px;
+  height: 700px;
+  width: 1200px;
+  background-image: url("/ressources/images/img-mission-background.jpeg");
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.band_our_mission {
+  background-color: rgb(0, 0, 0);
+  width: 1200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
