--- a/ressources/css/index.css
+++ b/ressources/css/index.css
@@ -4,8 +4,20 @@ html {
   font-family: "Helvetica";
   font-size: 22px;
   color: seashell;
-  opacity: 0.8;
+  opacity: 0.9;
 }
+
+body {
+  background-color: black;
+  opacity: 0.9;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 h1 {
   display: none;
 }
@@ -18,18 +30,24 @@ h1 {
 header {
   height: 69px;
   display: flex;
+  justify-content: space-between;
+  width: 1240px;
+  background-color: rgb(0, 0, 0);
+  position: fixed;
+  top: 0;
+  overflow: hidden;
 }
 
-.menu {
-  display: flex;
-  justify-content: flex-end;
+.menu ul {
+  display: inline-flex;
+  justify-content: ;
 }
 .menu ol {
   text-decoration: underline;
 }
 
 .ourmission {
-  margin-left: 10px;
+  margin-left: 20px;
   height: 700px;
   width: 1200px;
   background-image: url("/ressources/images/img-mission-background.jpeg");
@@ -37,12 +55,125 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  border-bottom: 1px solid seashell;
 }
 
 .band_our_mission {
   background-color: rgb(0, 0, 0);
   width: 1200px;
+  height: 100px;
   display: flex;
   flex-direction: column;
+  align-items: stretch;
+  text-align: center;
+}
+
+.h2_mission {
+  margin-top: 10px;
+}
+.h4_mission {
+  margin-top: -10px;
+}
+.tea {
+  width: 1000px;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.tea_of_month {
+  width: 1000px;
+  height: 130px;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  text-align: center;
+}
+
+.h2_tea {
+  margin-top: 40px;
+  margin-bottom: 0px;
+}
+.h4_tea {
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.berryblitz,
+.spiced_rhum,
+.donuts,
+.myrtie_ave,
+.bedford_bizzare {
+  width: 300px;
+  height: 200px;
+  margin-top: 10px;
+  margin-right: 10px;
+  margin-left: 60px;
+}
+
+.p_tea_of_month {
+  width: 300px;
+  height: 20px;
+  text-align: center;
+  margin-top: 10px;
+}
+
+.locations {
+  width: 1200px;
+  height: 500px;
+  background-image: url("/ressources/images/img-locations-background.jpeg");
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-content: center;
+}
+
+.h2_locations {
+  width: 1200px;
+  height: 70px;
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+.tree_loc {
+  width: 1000px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+}
+
+.h3_loc {
+  text-align: center;
+}
+
+.loc_box {
+  background-color: black;
+  width: 300px;
+  height: auto;
+  opacity: 1;
+}
+
+.p_location {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.address {
+  height: 200px;
+  width: 1000px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
   justify-content: center;
+  align-items: center;
+}
+
+.copyright {
+  margin-left: 20px;
+  text-align: left;
 }
